# MyPythonLib

./: README.md  pyproject.toml  setup.py
mylib/GitTool/: git_tool.py
mylib/LogSet/: __init__.py  mylog.py
mypylib/LogSet/: mylog.py
